wip: integrating dbt and dagster

--- a/pagila_dbt/models/sources.yml
+++ b/pagila_dbt/models/sources.yml
@@ -11,3 +11,7 @@ sources:
       - name: film
       - name: category
       - name: film_category
+      - name: customer
+      - name: rental
+      - name: inventory
+      - name: staff
