--- a/pagila_dbt/models/sources.yml
+++ b/pagila_dbt/models/sources.yml
@@ -15,3 +15,17 @@ sources:
       - name: rental
       - name: inventory
       - name: staff
+  - name: pagila
+    database: database
+    schema: main
+    freshness:
+      warn_after: {count: 12, period: hour}
+      error_after: {count: 24, period: hour}
+    tables:
+      - name: film
+      - name: category
+      - name: film_category
+      - name: customer
+      - name: rental
+      - name: inventory
+      - name: staff
