--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@
 version: "3.9"
 
 services:
+  # Postgres with the Pagila sample data set
   postgres:
     image: postgres:15-bullseye
     environment:
@@ -13,13 +14,36 @@ services:
     volumes:
       - ${PWD}/docker/postgresql/:/docker-entrypoint-initdb.d/
 
-  clickhouse:
-    image: clickhouse/clickhouse-server
-    container_name: clickhouse
-    hostname: clickhouse
-    volumes:
-      - ${PWD}/docker/clickhouse/config.xml:/etc/clickhouse-server/config.d/config.xml
-      - ${PWD}/docker/clickhouse/users.xml:/etc/clickhouse-server/users.d/users.xml
+  trino:
+    image: trinodb/trino:410
+    hostname: trino_container 
     ports:
-      - "127.0.0.1:8123:8123"
-      - "127.0.0.1:9000:9000"
+      - 8080:8080 
+    volumes:
+      - ./trino/catalog:/etc/trino/catalog
+
+  # Nessie Catalog Server Using In-Memory Store
+  nessie:
+    image: projectnessie/nessie:0.67.0
+    ports:
+      - 19120:19120
+
+  # Minio Storage Server
+  minio:
+    image: minio/minio:RELEASE.2023-07-21T21-12-44Z
+    environment:
+      - MINIO_ROOT_USER=admin
+      - MINIO_ROOT_PASSWORD=password
+      - MINIO_DOMAIN=storage
+      - MINIO_REGION_NAME=us-east-1
+      - MINIO_REGION=us-east-1
+    ports:
+      - 9001:9001 # UI Access
+      - 9000:9000
+    command: server /data --console-address ":9001"
+
+  # Metabase 
+  metabase:
+    image: metabase/metabase:v0.48.4
+    ports:
+      - "3000:3000"
