--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,7 +43,15 @@ services:
     command: server /data --console-address ":9001"
 
   # Metabase 
+  # curl -kL -o /plugins/duckdb.metabase-driver.jar https://github.com/AlexR2D2/metabase_duckdb_driver/releases/download/0.2.3/duckdb.metabase-driver.jar
   metabase:
-    image: metabase/metabase:v0.48.4
+    # image: metabase/metabase:v0.48.4
+    build: ./docker/metabase
     ports:
-      - "3000:3000"
+      - "5000:3000"
+    environment:
+      MB_DB_FILE: /metabase-data/metabase.db
+    volumes:
+      - ${PWD}/docker/metabase/data:/metabase-data
+      - ${PWD}/database.duckdb:/duckdb/database.duckdb
+    
