--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,34 @@ services:
     ports:
       - 8080:8080 
     volumes:
-      - ${PWD}/docker/trino:/etc/trino/catalog
+      - ${PWD}/docker/trino/catalog:/etc/trino/catalog
+      - ${PWD}/docker/trino/config.properties:/etc/trino/config.properties
+      - ${PWD}/docker/trino/password-authenticator.properties:/etc/trino/password-authenticator.properties
+      - ${PWD}/docker/trino/password.db:/etc/trino/password.db
+    depends_on:
+      - hive-metastore
+      - mariadb
+      - minio
+  
+  # Hive MetaStore backed by MariaDB for Table metadata
+  hive-metastore:
+    image: 'bitsondatadev/hive-metastore:latest'
+    ports:
+      - '9083:9083'
+    volumes:
+      -  ${PWD}/docker/hive/metastore-site.xml:/opt/apache-hive-metastore-3.0.0-bin/conf/metastore-site.xml:ro
+    environment:
+      METASTORE_DB_HOSTNAME: mariadb
+  mariadb:
+    image: 'mariadb:10.11.2'
+    ports:
+      - '3306:3306'
+    environment:
+      MYSQL_ROOT_PASSWORD: admin
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: admin
+      MYSQL_DATABASE: metastore_db
+
   
   # Nessie Catalog Server Using In-Memory Store
   nessie:
@@ -32,11 +59,13 @@ services:
   minio:
     image: minio/minio:RELEASE.2023-07-21T21-12-44Z
     environment:
-      - MINIO_ROOT_USER=admin
-      - MINIO_ROOT_PASSWORD=password
-      - MINIO_DOMAIN=storage
-      - MINIO_REGION_NAME=us-east-1
-      - MINIO_REGION=us-east-1
+      MINIO_ROOT_USER: "admin"
+      MINIO_ROOT_PASSWORD: "password"
+      MINIO_ACCESS_KEY: minio
+      MINIO_SECRET_KEY: minio123
+      MINIO_DOMAIN: "storage"
+      MINIO_REGION_NAME: "us-east-1"
+      MINIO_REGION: "us-east-1"
     ports:
       - 9001:9001 # UI Access
       - 9000:9000
