--- a/docker/trino/catalog/iceberg.properties
+++ b/docker/trino/catalog/iceberg.properties
@@ -1,10 +1,10 @@
 connector.name=iceberg
 iceberg.catalog.type=nessie
-iceberg.nessie-catalog.uri=https://localhost:19120/api/v2
-iceberg.nessie-catalog.default-warehouse-dir=s3a://nessie
+iceberg.nessie-catalog.uri=http://nessie:19120/api/v1
+iceberg.nessie-catalog.default-warehouse-dir=s3a://warehouse
 
-s3.aws-access-key=test
-s3.aws-secret-key=test12334567
+s3.aws-access-key=minio
+s3.aws-secret-key=minio123
 s3.endpoint=http://minio:9000
 s3.path-style-access=true
 s3.region=us-east-1
