--- a/docker/trino/catalog/hive.properties
+++ b/docker/trino/catalog/hive.properties
@@ -1,11 +1,11 @@
 connector.name=hive
 hive.metastore.uri=thrift://hive-metastore:9083
 hive.s3.path-style-access=true
-hive.s3.endpoint=http://minio:9000
+hive.s3.endpoint=http://localstack:4566
 hive.s3.aws-access-key=minio
 hive.s3.aws-secret-key=minio123
 hive.non-managed-table-writes-enabled=true
 # hive.s3select-pushdown.enabled=true
-hive.storage-format=ORC
+hive.storage-format=PARQUET
 hive.s3.ssl.enabled=false
 hive.allow-drop-table=true
